Implementação da tela de configurações - Issue #2
Nesta implementação o fluxo inicia já na tela principal (Projetos) e
segue verificando se as configurações foram aplicadas e se o usuário
está logado.

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -3,4 +3,5 @@
     <item name="toolbar" type="id" />
     <item name="action_done" type="id" />
     <item name="root_view" type="id" />
+    <item name="content_frame" type="id" />
 </resources>
