--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#2196F3</color>
-    <color name="colorPrimaryDark">#1976D2</color>
-    <color name="colorAccent">#1976D2</color>
+    <color name="colorPrimary">#459f67</color>
+    <color name="colorPrimaryDark">#3f825e</color>
+    <color name="colorAccent">#3f825e</color>
     <color name="white">#FFFFFF</color>
-    <color name="launch_background">#3f825e</color>
+    <color name="launch_background">@color/colorPrimaryDark</color>
 </resources>
