--- a/app/src/main/res/menu/activity_login.xml
+++ b/app/src/main/res/menu/activity_login.xml
@@ -4,7 +4,7 @@
     >
     <item
         android:id="@id/action_done"
-        android:title="@string/action_done"
+        android:title="@string/action_login"
         android:icon="@drawable/ic_done_24dp"
         app:showAsAction="always"
         />
