--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#3f825e</color>
     <color name="white">#FFFFFF</color>
     <color name="launch_background">@color/colorPrimaryDark</color>
+    <color name="accentTranslucent">#803f825e</color>
 </resources>
