--- a/app/src/main/res/layout/activity_work_step.xml
+++ b/app/src/main/res/layout/activity_work_step.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="br.com.libertsolutions.crs.app.stage.StageActivity"
+    tools:context=".step.WorkStepActivity"
     >
 
     <android.support.design.widget.AppBarLayout
@@ -15,7 +15,7 @@
         >
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+            android:id="@id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
@@ -24,6 +24,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_stage" />
+    <include layout="@layout/content_work_step" />
 
 </android.support.design.widget.CoordinatorLayout>
