--- a/app/src/main/res/layout/content_work_step.xml
+++ b/app/src/main/res/layout/content_work_step.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_stage"
-    tools:context=".stage.StageActivity"
+    tools:showIn="@layout/activity_work_step"
+    tools:context=".step.WorkStepActivity"
     >
 
     <android.support.v7.widget.RecyclerView
