Definindo status pendente da Etapa.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="white">#FFFFFF</color>
     <color name="launch_background">@color/colorPrimaryDark</color>
     <color name="accentTranslucent">#803f825e</color>
+    <color name="blackTranslucent">#20000000</color>
 </resources>
