Tela dos checkins.

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -9,4 +9,14 @@
     <item name="deliveryDate" type="id" />
     <item name="list" type="id" />
     <item name="stage_name" type="id" />
+    <item name="appbar" type="id" />
+    <item name="spinner" type="id" />
+    <item name="container" type="id" />
+    <item name="productType" type="id" />
+    <item name="productWidth" type="id" />
+    <item name="itemLocation" type="id" />
+    <item name="itemDone" type="id" />
+    <item name="productHeight" type="id" />
+    <item name="productLine" type="id" />
+    <item name="itemTreatment" type="id" />
 </resources>
