--- a/app/src/main/res/layout/activity_checkin.xml
+++ b/app/src/main/res/layout/activity_checkin.xml
@@ -2,7 +2,7 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/main_content"
+    android:id="@id/root_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
@@ -10,14 +10,14 @@
     >
 
     <android.support.design.widget.AppBarLayout
-        android:id="@+id/appbar"
+        android:id="@id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/Crs.AppBarOverlay"
         >
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+            android:id="@id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
@@ -26,20 +26,15 @@
             >
 
             <Spinner
-                android:id="@+id/spinner"
-                app:popupTheme="@style/Crs.PopupOverlay"
+                android:id="@id/spinner"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                app:popupTheme="@style/Crs.PopupOverlay"
                 />
         </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v4.widget.NestedScrollView
-        android:id="@+id/container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        />
+    <include layout="@layout/content_checkin" />
 
 </android.support.design.widget.CoordinatorLayout>
