--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -17,7 +17,7 @@
         android:scrollbarStyle="outsideOverlay"
         android:clipToPadding="false"
         app:layoutManager="LinearLayoutManager"
-        tools:listitem="@layout/item_project"
+        tools:listitem="@layout/item_work"
         />
 
 </RelativeLayout>
