Definida cor mais light para cor de fundo dos itens das listagens.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="launch_background">@color/colorPrimaryDark</color>
     <color name="accentTranslucent">#803f825e</color>
     <color name="blackTranslucent">#20000000</color>
+    <color name="item_background_color">#def1e5</color>
 </resources>
