--- a/app/src/main/res/layout/item_stage.xml
+++ b/app/src/main/res/layout/item_stage.xml
@@ -7,6 +7,7 @@
     android:background="?attr/selectableItemBackground"
     android:clickable="true"
     android:focusable="true"
+    android:focusableInTouchMode="true"
     >
 
     <TextView
