--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,8 @@
     <color name="accentTranslucent">#803f825e</color>
     <color name="blackTranslucent">#20000000</color>
     <color name="item_background_color">#def1e5</color>
+
+    <color name="status_pending">#739e73</color>
+    <color name="status_started">#3276b1</color>
+    <color name="status_finished">#a90329</color>
 </resources>
