Issue #12 - Barra de Status da etapa da obra.

--- a/app/src/main/res/layout/item_work_step.xml
+++ b/app/src/main/res/layout/item_work_step.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -8,15 +8,25 @@
     android:clickable="true"
     android:focusable="true"
     android:focusableInTouchMode="true"
+    android:orientation="horizontal"
     >
+
+    <View
+        android:id="@id/workStatus"
+        android:layout_width="10dp"
+        android:layout_height="match_parent"
+        android:background="@color/status_pending"
+        />
 
     <TextView
         android:id="@id/stage_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
         android:layout_gravity="center_vertical"
         tools:text="Expedição/Checagem"
         />
 
-</FrameLayout>
+</LinearLayout>
