Issue #12 - Definição das cores da barra de Status da etapa da obra.

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -20,4 +20,5 @@
     <item name="productHeight" type="id" />
     <item name="productLine" type="id" />
     <item name="itemTreatment" type="id" />
+    <item name="stepStatus" type="id" />
 </resources>
