--- a/app/src/main/res/layout/item_checkin.xml
+++ b/app/src/main/res/layout/item_checkin.xml
@@ -12,10 +12,19 @@
     android:gravity="center_vertical"
     >
 
+    <View
+        android:id="@id/stepStatus"
+        android:layout_width="10dp"
+        android:layout_height="match_parent"
+        android:background="@color/status_pending"
+        />
+
     <LinearLayout
         android:layout_width="0dp"
         android:layout_weight="3"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:orientation="vertical"
         >
 
