Issue #10 - Alterando o Status do Check-in.

--- a/app/src/main/res/layout/item_checkin.xml
+++ b/app/src/main/res/layout/item_checkin.xml
@@ -13,7 +13,7 @@
     >
 
     <View
-        android:id="@id/stepStatus"
+        android:id="@id/checkinStatus"
         android:layout_width="10dp"
         android:layout_height="match_parent"
         android:background="@color/status_pending"
