--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -21,4 +21,5 @@
     <item name="productLine" type="id" />
     <item name="itemTreatment" type="id" />
     <item name="stepStatus" type="id" />
+    <item name="checkinStatus" type="id" />
 </resources>
