--- a/app/src/main/res/layout/item_work.xml
+++ b/app/src/main/res/layout/item_work.xml
@@ -42,7 +42,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                tools:text="JUL.379.15-REV05"
+                tools:text="JUL.379.15-REV05/CRIXÁS"
                 />
         </TableRow>
 
@@ -72,7 +72,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                android:text="@string/delivery_or_start_date_caption"
+                android:text="@string/work_date_caption"
                 />
 
             <TextView
