Issue #15 - Refatoração da estrutura da entidade Etapa e suas dependências.

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -9,7 +9,7 @@
     <item name="customerName" type="id" />
     <item name="workDate" type="id" />
     <item name="list" type="id" />
-    <item name="stage_name" type="id" />
+    <item name="stepName" type="id" />
     <item name="appbar" type="id" />
     <item name="spinner" type="id" />
     <item name="container" type="id" />
