--- a/app/src/main/res/layout/item_work_step.xml
+++ b/app/src/main/res/layout/item_work_step.xml
@@ -19,7 +19,7 @@
         />
 
     <TextView
-        android:id="@id/stage_name"
+        android:id="@id/stepName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
