--- a/app/src/main/res/layout/item_work_step.xml
+++ b/app/src/main/res/layout/item_work_step.xml
@@ -15,7 +15,7 @@
         android:id="@id/stepStatus"
         android:layout_width="10dp"
         android:layout_height="match_parent"
-        android:background="@color/status_pending"
+        android:background="@color/statusPending"
         />
 
     <TextView
