--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,7 +14,7 @@
     </style>
 
     <style name="Crs.LaunchScreen" parent="Crs.NoActionBar">
-        <item name="colorPrimaryDark">@color/launch_background</item>
+        <item name="colorPrimaryDark">@color/launchBackground</item>
     </style>
 
     <style name="Crs.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
