--- a/app/src/main/res/layout/item_work.xml
+++ b/app/src/main/res/layout/item_work.xml
@@ -23,7 +23,7 @@
         android:layout_height="match_parent"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:stretchColumns="*"
+        android:stretchColumns="1"
         android:gravity="center_vertical"
         >
 
@@ -34,6 +34,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                android:layout_marginRight="8dp"
+                android:layout_marginEnd="8dp"
                 android:text="@string/project_id_caption"
                 />
 
