--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,7 +17,6 @@
         app:popupTheme="@style/Crs.PopupOverlay"
         />
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -35,7 +34,7 @@
             android:layout_height="wrap_content"
             >
 
-            <EditText
+            <android.support.design.widget.TextInputEditText
                 android:id="@+id/cpf"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -50,7 +49,7 @@
 
                 <requestFocus />
 
-            </EditText>
+            </android.support.design.widget.TextInputEditText>
 
         </android.support.design.widget.TextInputLayout>
 
@@ -60,7 +59,7 @@
             android:layout_height="wrap_content"
             >
 
-            <EditText
+            <android.support.design.widget.TextInputEditText
                 android:id="@+id/password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
