--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -18,6 +18,45 @@
         android:clipToPadding="false"
         app:layoutManager="LinearLayoutManager"
         tools:listitem="@layout/item_work"
+        android:visibility="gone"
         />
+
+    <LinearLayout
+        android:id="@+id/empty_state"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="16dp"
+        android:orientation="vertical"
+        android:visibility="gone"
+        android:gravity="center"
+        tools:visibility="visible"
+        android:background="@android:color/white"
+        >
+
+        <ImageView
+            android:layout_width="144dp"
+            android:layout_height="144dp"
+            android:src="@drawable/ic_no_works"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Nenhuma obra"
+            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+            android:gravity="center"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Não há dados disponíveis ou nenhuma obra está em execução"
+            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+            android:gravity="center"
+            />
+
+    </LinearLayout>
 
 </RelativeLayout>
