Issue #35 - Lista das obras estava invisível no layout da tela de obras.

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -18,7 +18,7 @@
         android:clipToPadding="false"
         app:layoutManager="LinearLayoutManager"
         tools:listitem="@layout/item_work"
-        android:visibility="gone"
+        tools:visibility="gone"
         />
 
     <LinearLayout
@@ -27,10 +27,10 @@
         android:layout_height="match_parent"
         android:padding="16dp"
         android:orientation="vertical"
-        android:visibility="gone"
         android:gravity="center"
-        tools:visibility="visible"
         android:background="@android:color/white"
+        android:visibility="gone"
+        tools:visibility="visible"
         >
 
         <ImageView
