Corrigindo referência de resource renomeado.

--- a/app/src/main/res/layout/content_work_step.xml
+++ b/app/src/main/res/layout/content_work_step.xml
@@ -17,7 +17,7 @@
         android:scrollbarStyle="outsideOverlay"
         android:clipToPadding="false"
         app:layoutManager="LinearLayoutManager"
-        tools:listitem="@layout/item_stage"
+        tools:listitem="@layout/item_work_step"
         />
 
 </FrameLayout>
