--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -34,25 +34,28 @@
         >
 
         <ImageView
+            android:id="@+id/empty_image"
             android:layout_width="144dp"
             android:layout_height="144dp"
             android:src="@drawable/ic_no_works"
             />
 
         <TextView
+            android:id="@+id/empty_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="Nenhuma obra"
+            android:text="@string/title_no_data"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
             android:gravity="center"
             />
 
         <TextView
+            android:id="@+id/empty_tagline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="Não há dados disponíveis ou nenhuma obra está em execução"
+            android:text="@string/tagline_no_data"
             android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
             android:gravity="center"
             />
