#39 - Sincronização manual na tela inicial.

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -21,4 +21,5 @@
     <item name="stepStatus" type="id" />
     <item name="checkinStatus" type="id" />
     <item name="productColor" type="id" />
+    <item name="swipe_container" type="id"/>
 </resources>
