#39 - Sincronização manual na tela de etapas.

--- a/app/src/main/res/layout/activity_flow.xml
+++ b/app/src/main/res/layout/activity_flow.xml
@@ -25,6 +25,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_work_step" />
+    <include layout="@layout/content_flow" />
 
 </android.support.design.widget.CoordinatorLayout>
