--- a/app/src/main/res/layout/content_checkin.xml
+++ b/app/src/main/res/layout/content_checkin.xml
@@ -9,15 +9,22 @@
     tools:context=".checkin.CheckinActivity"
     >
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@android:id/list"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@id/swipe_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="vertical"
-        android:scrollbarStyle="outsideOverlay"
-        android:clipToPadding="false"
-        app:layoutManager="LinearLayoutManager"
-        tools:listitem="@layout/item_checkin"
-        />
+        android:layout_height="wrap_content"
+        >
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@id/list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scrollbars="vertical"
+            android:scrollbarStyle="outsideOverlay"
+            android:clipToPadding="false"
+            app:layoutManager="LinearLayoutManager"
+            tools:listitem="@layout/item_checkin"
+            />
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </FrameLayout>
