--- a/app/src/main/res/menu/menu_checkin.xml
+++ b/app/src/main/res/menu/menu_checkin.xml
@@ -6,6 +6,14 @@
     >
 
     <item
+        android:id="@+id/menu_search"
+        android:title="@string/menu_search"
+        android:icon="@drawable/ic_search"
+        app:showAsAction="always|collapseActionView"
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        />
+
+    <item
         android:id="@+id/action_check_all"
         android:title="@string/action_check_all"
         app:showAsAction="ifRoom"
