Reorganização do pacote da tela dos check-ins.

--- a/app/src/main/res/layout/content_checkin.xml
+++ b/app/src/main/res/layout/content_checkin.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_checkin"
-    tools:context=".checkin.CheckinActivity"
+    tools:context=".checkinscreen.CheckinActivity"
     >
 
     <android.support.v4.widget.SwipeRefreshLayout
