--- a/app/src/main/res/layout/content_flow.xml
+++ b/app/src/main/res/layout/content_flow.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_flow"
-    tools:context=".flow.FlowActivity"
+    tools:context=".flowscreen.FlowActivity"
     >
 
     <android.support.v4.widget.SwipeRefreshLayout
