--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:id="@id/root_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="br.com.libertsolutions.crs.app.login.LoginActivity"
+    tools:context=".loginscreen.LoginActivity"
     >
 
     <android.support.v7.widget.Toolbar
