--- a/app/src/main/res/layout/item_flow.xml
+++ b/app/src/main/res/layout/item_flow.xml
@@ -13,7 +13,10 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="0dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
         android:elevation="3dp"
         app:contentPadding="16dp"
         app:cardUseCompatPadding="true"
