--- a/app/src/main/res/layout/item_work.xml
+++ b/app/src/main/res/layout/item_work.xml
@@ -1,91 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minHeight="?attr/listPreferredItemHeightLarge"
     android:background="?attr/selectableItemBackground"
     android:clickable="true"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    android:orientation="horizontal"
     >
 
-    <View
-        android:id="@id/workStatus"
-        android:layout_width="10dp"
-        android:layout_height="match_parent"
-        tools:background="@color/statusPending"
-        />
-
-    <TableLayout
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:stretchColumns="1"
-        android:gravity="center_vertical"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:elevation="3dp"
+        app:contentPadding="16dp"
+        app:cardUseCompatPadding="true"
+        app:cardPreventCornerOverlap="false"
         >
 
-        <TableRow>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            >
 
-            <TextView
-                android:id="@+id/workCodeCaption"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                android:layout_marginRight="8dp"
-                android:layout_marginEnd="8dp"
-                android:text="@string/project_id_caption"
+            <View
+                android:id="@id/workStatus"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="@drawable/circle_status_pending"
                 />
 
-            <TextView
-                android:id="@id/workCode"
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                tools:text="JUL.379.15-REV05/CRIXÁS"
-                />
-        </TableRow>
+                android:paddingLeft="32dp"
+                android:paddingStart="32dp"
+                >
 
-        <TableRow>
+                <TextView
+                    android:id="@id/workCode"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                    android:maxLines="2"
+                    android:ellipsize="end"
+                    tools:text="JUL.670.15-FECHADO/JARDINS VERONA"
+                    />
 
-            <TextView
-                android:id="@+id/customerNameCaption"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                android:text="@string/customer_name_caption"
-                />
+                <TextView
+                    android:id="@+id/customerNameCaption"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:layout_below="@id/workCode"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    android:text="@string/customer_name_caption"
+                    />
 
-            <TextView
-                android:id="@id/customerName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                tools:text="Gabriella e Cristiano"
-                />
-        </TableRow>
+                <TextView
+                    android:id="@id/customerName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/workCode"
+                    android:paddingLeft="8dp"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:maxLines="1"
+                    android:ellipsize="end"
+                    android:layout_toRightOf="@id/customerNameCaption"
+                    android:layout_toEndOf="@id/customerNameCaption"
+                    android:layout_alignBaseline="@id/customerNameCaption"
+                    tools:text="CRISTIANO ALVES COSTA"
+                    />
 
-        <TableRow>
+                <TextView
+                    android:id="@+id/workDateCaption"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/customerNameCaption"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    android:text="@string/work_date_caption"
+                    />
 
-            <TextView
-                android:id="@+id/workDateCaption"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                android:text="@string/work_date_caption"
-                />
+                <TextView
+                    android:id="@id/workDate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/customerName"
+                    android:paddingLeft="8dp"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:maxLines="1"
+                    android:ellipsize="middle"
+                    android:layout_toRightOf="@id/workDateCaption"
+                    android:layout_toEndOf="@id/workDateCaption"
+                    android:layout_alignBaseline="@id/workDateCaption"
+                    tools:text="1 de abr de 2016"
+                    />
 
-            <TextView
-                android:id="@id/workDate"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                tools:text="26/01/2016"
-                />
-        </TableRow>
+            </RelativeLayout>
 
-    </TableLayout>
+        </LinearLayout>
 
-</LinearLayout>
+    </android.support.v7.widget.CardView>
+
+</FrameLayout>
